DemoApp shows window screenshot

--- a/Demo/SRWindowManagerDemoApp/SRWindowManagerDemoApp/Base.lproj/Main.storyboard
+++ b/Demo/SRWindowManagerDemoApp/SRWindowManagerDemoApp/Base.lproj/Main.storyboard
@@ -811,12 +811,41 @@
                                                     <animations/>
                                                 </scroller>
                                             </scrollView>
+                                            <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QSI-i6-SoM">
+                                                <rect key="frame" x="0.0" y="0.0" width="233" height="454"/>
+                                                <clipView key="contentView" id="F2U-DS-WJz">
+                                                    <rect key="frame" x="1" y="1" width="231" height="452"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <subviews>
+                                                        <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6p8-Dh-pRw">
+                                                            <rect key="frame" x="0.0" y="358" width="181" height="94"/>
+                                                            <animations/>
+                                                        </view>
+                                                    </subviews>
+                                                    <animations/>
+                                                </clipView>
+                                                <animations/>
+                                                <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="ase-bA-buE">
+                                                    <rect key="frame" x="1" y="437" width="231" height="16"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <animations/>
+                                                </scroller>
+                                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="OS4-1y-j8i">
+                                                    <rect key="frame" x="216" y="1" width="16" height="452"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <animations/>
+                                                </scroller>
+                                            </scrollView>
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="r4m-9J-vRh" secondAttribute="trailing" id="AE8-KS-IUx"/>
                                             <constraint firstAttribute="bottom" secondItem="r4m-9J-vRh" secondAttribute="bottom" id="Gda-Dz-LR0"/>
+                                            <constraint firstAttribute="bottom" secondItem="QSI-i6-SoM" secondAttribute="bottom" id="O9I-jH-N3W"/>
+                                            <constraint firstItem="QSI-i6-SoM" firstAttribute="leading" secondItem="Dhl-x2-Izn" secondAttribute="leading" id="R2A-ev-dqE"/>
                                             <constraint firstItem="r4m-9J-vRh" firstAttribute="leading" secondItem="Dhl-x2-Izn" secondAttribute="leading" id="bcs-QA-QEO"/>
                                             <constraint firstItem="r4m-9J-vRh" firstAttribute="top" secondItem="Dhl-x2-Izn" secondAttribute="top" id="p28-ha-BYS"/>
+                                            <constraint firstItem="QSI-i6-SoM" firstAttribute="top" secondItem="Dhl-x2-Izn" secondAttribute="top" id="sYR-iT-rJ1"/>
+                                            <constraint firstAttribute="trailing" secondItem="QSI-i6-SoM" secondAttribute="trailing" id="tAk-1x-ULH"/>
                                         </constraints>
                                         <animations/>
                                     </customView>
@@ -842,6 +871,7 @@
                         <animations/>
                     </view>
                     <connections>
+                        <outlet property="contentScrollView" destination="QSI-i6-SoM" id="MhT-pw-Igw"/>
                         <outlet property="openAccessbilityButton" destination="qvb-aa-Fob" id="Zs6-wd-TdS"/>
                         <outlet property="outlineView" destination="uQF-Po-l9d" id="HzM-oK-k9k"/>
                         <outlet property="statusLabel" destination="ypT-Ke-hI2" id="sIM-vo-tSx"/>
